--- a/src/main/resources/templates/Product/ProductList.html
+++ b/src/main/resources/templates/Product/ProductList.html
@@ -148,13 +148,13 @@
                     <div class="offcanvas-body">
                         <ul id="navbar" class="navbar-nav text-uppercase justify-content-end align-items-center flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link me-4 active" th:href="@{/}">Home</a>
+                                <a class="nav-link me-4 " th:href="@{/}">Home</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link me-4" href="#company-services">Services</a>
                             </li>
                             <li class="nav-item" sec:authorize="hasAnyAuthority('SALES', 'USER')">
-                                    <a class="nav-link me-4" th:href="@{/san-pham/tat-ca-san-pham}">Product</a>
+                                    <a class="nav-link me-4 active" th:href="@{/san-pham/tat-ca-san-pham}">Product</a>
                                    <!-- <a class="nav-link me-4" href="#mobile-products">Products</a> -->
                             </li>
                             <li class="nav-item">
@@ -245,44 +245,6 @@
             </div>
         </div>     
     </header>
-    <section id="billboard" class="position-relative overflow-hidden bg-light-blue">
-        <div class="swiper main-swiper">
-            <div class="swiper-wrapper">
-                <div class="swiper-slide">
-                    <div class="container">
-                        <div class="row d-flex align-items-center">
-                            <div class="col-md-6">
-                                <div class="banner-content">
-                                    <h1 class="display-2 text-uppercase text-dark pb-5">SteelSeries Arctis Pro + GameDAC Black Edition</h1>
-                                </div>
-                            </div>
-                            <div class="col-md-5">
-                                <div class="image-holder">
-                                    <img src="images/steelseries-banner.png" alt="banner">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="swiper-slide">
-                    <div class="container">
-                        <div class="row d-flex flex-wrap align-items-center">
-                            <div class="col-md-6">
-                                <div class="banner-content">
-                                    <h1 class="display-2 text-uppercase text-dark pb-5">MonsGeek MG75 Prunus Lannesiana</h1>
-                                </div>
-                            </div>
-                            <div class="col-md-5">
-                                <div class="image-holder">
-                                    <img src="images/akko-banner.png" alt="banner">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
     <br><br><br>
 
     
@@ -296,12 +258,12 @@
                     </div> -->
                 </div>
                 <div class="swiper product-swiper product-keyboard-swiper">
-                    <div class="swiper-wrapper" th:each="product:${listproductBP}">
+                    <div class="swiper-wrapper" th:each="product:${listproduct}">
                         <div class="swiper-slide">
                             <div class="product-card position-relative">
                                 <div class="image-holder">
                                     <!--<a href=""><img src="images/iquinix-a80.png" alt="product-item" class="img-fluid"></a>-->
-                                    <a th:href="@{/san-pham/thong-tin-san-pham?id={id} (id=${product.MaSP})}"><img th:src="@{images/} + ${product.HinhAnhSP}" alt="product-item" class="img-fluid"></a>
+                                    <a th:href="@{/san-pham/thong-tin-san-pham?id={id} (id=${product.MaSP})}"><img th:src="@{/images/} + ${product.HinhAnhSP}" alt="product-item" class="img-fluid"></a>
                                 </div>
                                 <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
                                     <h3 class="card-title text-uppercase">
@@ -313,213 +275,39 @@
                                 <span class="item-price" th:text="${product.Gia} + ₫"></span>
                             </div>
                         </div>
-                        
                     </div>
                 </div>
             </div>
         </div>
         <div class="swiper-pagination position-absolute text-center"></div>
     </section>
-
-
-    <section id="mouse-products" class="product-store position-relative padding-large no-padding-top">
-        <div class="container">
-            <div class="row">
-                <div class="display-header d-flex justify-content-between pb-3">
-                    <h2 class="display-7 text-dark text-uppercase">Chuột máy tính</h2>
-                    <!-- <div class="btn-right">
-                        <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
-                    </div> -->
-                </div>
-                <div class="swiper product-swiper product-mouse-swiper">
-                    <div class="swiper-wrapper" th:each="productCMT :${listproductCMT}">
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a th:href="@{/san-pham/thong-tin-san-pham?id={id} (id=${productCMT.MaSP})}"><img th:src="@{images/} + ${productCMT.HinhAnhSP}" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a th:href="@{/san-pham/thong-tin-san-pham?id={id} (id=${productCMT.MaSP})} " th:text="${productCMT.TenSP}"></a>
-                                    </h3>
-                                </div>
-                                <span class="item-price" th:text="${productCMT.Gia} + ₫"></span>
-                            </div>
-                        </div>
-                      
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="swiper-pagination position-absolute text-center"></div>
-    </section>
-
-
-    <section id="headphone-products" class="product-store position-relative padding-large no-padding-top">
-        <div class="container">
-            <div class="row">
-                <div class="display-header d-flex justify-content-between pb-3">
-                    <h2 class="display-7 text-dark text-uppercase">Tai nghe</h2>
-                    <!-- <div class="btn-right">
-                        <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">Go to Shop</a>
-                    </div> -->
-                </div>
-                <div class="swiper product-swiper product-headphone-swiper">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="product-card position-relative">
-                                <div class="image-holder">
-                                    <a href=""><img src="images/steelseries-arctis-nova-pro.png" alt="product-item" class="img-fluid"></a>
-                                </div>
-                                <div class="card-detail d-flex justify-content-between align-items-baseline pt-3">
-                                    <h3 class="card-title text-uppercase">
-                                        <a href="#">Steelseries Arctis Nova Pro Wireless</a>
-                                    </h3>
-                                </div>
-                                <span class="item-price">10.190.000₫</span>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="swiper-pagination position-absolute text-center"></div>
-    </section>
-
-    <section id="yearly-sale" class="bg-light-blue overflow-hidden mt-5 padding-xlarge" style="background-image: url('images/sony-banner.png');background-position: right; background-repeat: no-repeat;">
-        <div class="row d-flex flex-wrap align-items-center">
-            <div class="col-md-6 col-sm-12">
-                <div class="text-content offset-4 padding-medium">
-                    <h3>16% off</h3>
-                    <h2 class="display-2 pb-5 text-uppercase text-dark">Hires Sony</h2>
-                    <h2>MDR-1AM2</h2>
-                </div>
-            </div>
-            <div class="col-md-6 col-sm-12">
-                
-            </div>
-        </div>
-    </section>
-
     <br><br><br>
 
+
+
+    <nav aria-label="Page navigation example" th:if="${totalPages > 1}">
+        <ul class="pagination">
+            <li class="page-item" th:class="${listproduct.hasPrevious() ? '' : 'disabled'}">
+                <a class="page-link" th:href="@{/san-pham/tat-ca-san-pham?page=__${listproduct.number-1}__}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+            <li class="page-item" th:each="page : ${#numbers.sequence(0, totalPages - 1)}"
+                th:class="${listproduct.number == page ? 'active' : ''}">
+                <a class="page-link "th:href="@{/san-pham/tat-ca-san-pham?page=__${page}__}"
+                th:text="${page + 1}"></a>
+            </li>
+            <li class="page-item" th:class="${listproduct.hasNext() ? '' : 'disabled'}">
+            <a class="page-link "
+            th:href="@{/san-pham/tat-ca-san-pham?page=__${listproduct.number+1}__}" aria-label="Next">
+            
+            <span aria-hidden="true">&raquo;</span>
+            </a>
+            </li>
+        </ul>
+    </nav>
+
+    <br><br><br>    
     <footer id="footer" class="overflow-hidden">
         <div class="container">
             <div class="row">
@@ -630,7 +418,7 @@
         <hr>
     </footer>
     <script th:src="@{/js/jquery-1.11.0.min.js}"></script>
-    <script th:src="@{https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
     <script type="text/javascript" th:src="@{/js/bootstrap.bundle.min.js}"></script>
     <script type="text/javascript" th:src="@{/js/plugins.js}"></script>
     <script type="text/javascript" th:src="@{/js/script.js}"></script>
